tests/cases/compiler-development/artifact/errors/diagnostic-trait-qualified-associated-expected-missing-impl.diagnostic
diagnostic error code=T0001 family=type message="type Other does not implement trait 'Build' for trait-qualified associated function call" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-qualified-associated-expected-missing-impl.ari" display="tests/cases/traits/errors/trait-qualified-associated-expected-missing-impl.ari" bytes=268
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-qualified-associated-expected-missing-impl.ari" line=20 column=22 end_line=20 end_column=27 byte_start=235 byte_end=240 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-qualified-associated-expected-missing-impl.ari:20:22\n    |\n 20 |   let other: Other = Build::build(1);\n    |                      ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-qualified-associated-expected-missing-impl.ari" line=2 column=6 end_line=2 end_column=11 byte_start=19 byte_end=24 message="associated function 'Build::build' requires an impl of trait 'Build'"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-qualified-associated-expected-missing-impl.ari:2:6\n   |\n 2 |   fn build(value: i64) -> Self\n   |      ^^^^^"
  Note index=0 location=none message="trait-qualified associated calls are resolved through an impl for the selected Self type"
  Help index=0 location=none message="implement trait 'Build' for Other or choose a type that already implements it"
